Add button to change grid size

--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 		<title>Etch-A-Sketch</title>
 	</head>
 	<body>
-		<div class="container"></div>
+		<button type="button" id="btn">Choose the grid size</button>
 
+		<div class="container"></div>
 
 		<script src=./script.js></script>
 	</body>
